--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "@dekkedapp <team@dekked.app>",
   "dependencies": {
-    "dekked-design-system": "^1.4.1",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
+    "@types/react-typist": "^2.0.2",
+    "dekked-design-system": "^1.4.4",
     "gatsby": "^3.11.1",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -18,7 +20,6 @@
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-sharp": "^3.11.0",
-    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
@@ -27,6 +28,8 @@
     "react-intl": "^5.20.7",
     "react-select": "^4.3.1",
     "react-tooltip": "^4.2.21",
+    "react-typewriter-effect": "^1.1.0",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
