--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-google-gtag": "^3.11.0",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^3.11.0",
+    "gatsby-plugin-netlify": "^3.12.0",
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-preload-fonts": "^2.11.0",
     "gatsby-plugin-react-helmet": "^4.11.0",
