--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "@dekkedapp <team@dekked.app>",
   "dependencies": {
+    "@types/js-cookie": "^2.2.7",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-typist": "^2.0.2",
     "dekked-design-system": "^1.4.4",
@@ -21,6 +22,7 @@
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-sharp": "^3.11.0",
+    "js-cookie": "^3.0.0",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
