--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-focus-lock": "^2.5.2",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.20.7",
+    "react-reveal": "^1.2.2",
     "react-select": "^4.3.1",
     "react-tooltip": "^4.2.21",
     "react-typist": "^2.0.5",
